Fix issues with date alignment in opinion page

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -44,19 +44,21 @@ a:hover {
 a, 
 ul,
 li,  
-p {
+p,
+span {
 	font-size: $font-size; 
 }
 
 h1, 
 h2, 
-h3, 
+h3,
 h4, 
 h5, 
 a, 
 ul,
 li,  
-p {
+p,
+span {
 	color: $text-p; 
 }
 
@@ -128,7 +130,7 @@ p {
 	.navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
  		margin-left: 25px;
 	}
-
+}
 
 /************************
 
@@ -139,6 +141,7 @@ p {
 .blog-list-img {
 	display: none; 
 	@media (min-width: $break-s) {
+		clear: left;
 		display: inline-block; 
 		float: left; 
 		margin: 0px 15px 0 0; 
@@ -164,28 +167,26 @@ p {
 	font-size: $font-size+2px; 
 	padding: 10px 16px 10px 16px; 
 }
+
 .caption .btn-lg:hover {
-	
+
 }
 
-.thumbnail-placeholder {
+.date-holder {
 	display: none; 
 	@media (min-width: $break-s) {
-		background-color: $background-d; 
 		border-radius: 5px; 
 		display: inline-block; 
 		float: left; 
-		height: 150px;
 		margin: 0px 15px 0 0;  
+		text-align: center; 
 		width: 150px; 
-	}
-	
+	}	
 }
+
 
 /************************
 
   Navigation  
 
 *************************/
-
-}
